--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
 	<h1></h1>
 	<h2></h2>
 	<p></p>
+	<table>
+		<thead>
+			<tr>
+				<th>NO</th>
+				<th>NAMA</th>
+				<th>TANGGAL LAHIR</th>
+				<th>ALAMAT</th>
+			</tr>
+		</thead>
+	</table>
 </body>
 </html>
