--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
-<<html>
+<html>
 <head>
-	<title></title>
+  <title>HALAMAN AWAL</title>
 </head>
 <body>
-	<h1></h1>
-	<h2></h2>
-	<p></p>
-	<table>
-		<thead>
-			<tr>
-				<th>NO</th>
-				<th>NAMA</th>
-				<th>TANGGAL LAHIR</th>
-				<th>ALAMAT</th>
-			</tr>
-		</thead>
-	</table>
+  <h1>DATA PEGAWAI</h1>
+  <h2>PT. PERSIMPANGAN </h2>
+  <p>Jalan Simpang Siur</p>
+  <table>
+    <thead>
+	  <tr> 
+	    <th>NO</th>
+		<th>NAMA</th>
+		<th>TANGGAL LAHIR</th>
+		<th>ALAMAT</th>
+	  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	  	<td>1</td>
+	  	<td>Aji Mumpung</td>
+	  	<td>01-01-1991</td>
+	  	<td>Jalan Laksana Merdeka No.17</td>
+	  </tr>	
+	</tbody>
+  </table>
 </body>
 </html>
